# stats_on_video

./: .gitignore  README.md  app.py  preview_overlay.py  pyproject.toml  video_processor.py
static/: app.js  index.html  style.css
